Fix top nav alignment and add hover effect

--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,11 @@ body{
 }
 .header img{
     height: 100px;
-    width: auto;
     float: left;
 }
 .nav{
     float: right;
+    overflow: auto;
 }
 .nav a{
     display: block;
@@ -22,28 +22,44 @@ body{
     text-decoration: none;
     font-family: sans-serif;
     width: 100px;
-    padding: 30px 5px;
+    padding: 42px 5px;
     color: black;
     margin-right: 0;
     text-align: center;
+}
+.nav a:hover{
+    color: #96bc33;
+    text-shadow: 1px 1px 2px #8096449d;
 }
 #chat{
     background: url(images/chat.png);
     background-size: 20px;
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: 76px;
+}
+#chat:hover{
+    background: url(images/chat-hover.png);
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-position: 76px;
 }
 #call{
     background: url(images/phone.png);
     background-size: 20px;
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: 70px 40px;
+}
+#call:hover{
+    background-image: url(images/phone-hover.png);
 }
 #login{
     background: url(images/user.png);
     background-size: 20px;
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: 75px 40px;
+}
+#login:hover{
+    background-image: url(images/user-hover.png);
 }
 .container{
     width: 50%;
